finish Eller Algorithm

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           <select name="mazeAlgo" id="mazeAlgo">
             <option value="DFS">DFS</option>
             <option value="Sidewinder">Sidewinder</option>
+            <option value="Eller">Eller</option>
           </select>
           <br>
           <button type="submit" name="submitBtn">Generate!</button>
