--- a/index.html
+++ b/index.html
@@ -34,8 +34,17 @@
             <div class="input-container">
               <label>Tốc độ: </label>
               <span id="spd-value">50</span>
-              <input type="range" name="spdbar" id="spdbar" min=1 max=100 value=50>
-
+              <input type="range" name="spd-bar" id="spd-bar" min=1 max=100 value=50>
+            </div>
+            <div class="input-container">
+              <label>Kích thước khối: </label>
+              <span id="cell-size-value">15</span>
+              <input type="range" name="cell-size-bar" id="cell-size-bar" min=10 max=75 value=15>
+            </div>
+            <div class="input-container">
+              <label>Độ nghiêng: </label>
+              <span id="perspective-value">0.7</span>
+              <input type="range" name="perspective-bar" id="perspective-bar" min=0.5 max=1 step=0.1 value=0.7>
             </div>
             <div class="input-container">
               <label>Chọn thuật toán để sinh mê cung:</label>
@@ -49,7 +58,7 @@
           </form>
         </div>
        </div>
-      <dialog id="myDialog">
+      <dialog close id="myDialog">
         <p id="dialogText">Đã sinh mê cung xong!</p>
         <button id="closeDialogBtn" name="closeDialogBtn">click to close</button>
       </dialog>
